--- a/front/matchs/match.html
+++ b/front/matchs/match.html
@@ -10,23 +10,23 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="../matchs/matchs_list.html">PARTIDAS</a>
+            <a class="navbar-brand" href="../matchs/home.html">PARTIDAS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="../profile/profile.html">PERFIL</a>
                     </li>
+                    
                 </ul>
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">SAIR</a>
+                        <a class="nav-link" onclick="logout();">SAIR</a>
                     </li>
                 </ul>
             </div>
@@ -71,6 +71,7 @@
         <script src="js/fetchData.js"></script>
         <script src="js/sendJoke.js"></script>
         <script src="js/sendNewJoke.js"></script>
+        <script src="../session.js"></script>
 </body>
 
 </html>
