--- a/front/matchs/matchDetails.html
+++ b/front/matchs/matchDetails.html
@@ -10,23 +10,23 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="../matchs/matchs_list.html">PARTIDAS</a>
+            <a class="navbar-brand" href="../matchs/home.html">PARTIDAS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="../profile/profile.html">PERFIL</a>
                     </li>
+
                 </ul>
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">SAIR</a>
+                        <a class="nav-link" onclick="logout();">SAIR</a>
                     </li>
                 </ul>
             </div>
@@ -37,14 +37,172 @@
         <h2>Detalhes da Partida</h2>
 
         <button class="btn btn-primary mb-3" onclick="showRanking()">Ver Ranking</button>
+        <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#sendJokeModal"
+            id="participateButton">Participar</button>
+        <div class="row">
+            <table class="table table-bordered">
+                <tbody>
+                    <tr>
+                        <th>ID</th>
+                        <td id="idCell"></td>
+                    </tr>
+                    <tr>
+                        <th>Título</th>
+                        <td id="referenceCell"></td>
+                    </tr>
+                    <tr>
+                        <th>Participantes</th>
+                        <td id="participantsCountCell"></td>
+                    </tr>
+                    <tr>
+                        <th>Hora da abertura</th>
+                        <td id="datetimeOpenCell"></td>
+                    </tr>
+                    <tr>
+                        <th>Em andamento?</th>
+                        <td id="isOpenCell"></td>
+                    </tr>
+                    <tr>
+                        <th>Criador</th>
+                        <td id="hosterUsernameCell"></td>
+                    </tr>
+                    <tr>
+                        <th>Submetido</th>
+                        <td id="hosterDateJoinedCell"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div id="memesContainer" class="row"></div>
+    <div class="modal fade" id="sendJokeModal" tabindex="-1" aria-labelledby="sendJokeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <link rel="stylesheet" href="../meme_generator/css/styles.css">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="sendJokeModalLabel">Enviar Nova Piada</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container mt-5">
+                        <div class="row">
 
-        <div class="row" id="jokesContainer">
+                            <div class="col-md-6">
+                                <div class="card">
+                                    <div class="card-body" id="canvasWrapper">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="card mb-4">
+                                    <div class="card-body">
+                                        <h3><i class="fa fa-picture-o fa-fw" aria-hidden="true"></i> Imagem de Origem
+                                        </h3>
+                                        <div class="form-group">
+                                            <label for="imgURL">A partir de URL</label>
+                                            <input id="imgURL" class="form-control" type="text"
+                                                placeholder="Link para a imagem" />
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label for="imgFile">Do Disco Local</label>
+                                            <div class="input-group">
+                                                <div class="custom-file">
+                                                    <!-- Botão para acionar a escolha de arquivo -->
+                                                    <button type="button" class="btn btn-primary"
+                                                        onclick="document.getElementById('imgFile').click();">Escolher
+                                                        arquivo</button>
+                                                    <!-- Input de arquivo oculto -->
+                                                    <input id="imgFile" type="file" class="form-control-file d-none"
+                                                        accept="image/*" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="card mb-4">
+                                    <div class="card-body">
+                                        <h3><i class="fa fa-commenting-o fa-fw" aria-hidden="true"></i> Texto do Meme
+                                        </h3>
+                                        <div class="form-group">
+                                            <label for="textTop">Texto Superior</label>
+                                            <input id="textTop" type="text" class="form-control"
+                                                placeholder="Texto superior" />
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="textBottom">Texto Inferior</label>
+                                            <input id="textBottom" type="text" class="form-control"
+                                                placeholder="Texto inferior" />
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card mb-4">
+                                    <div class="card-body">
+                                        <h3><i class="fa fa-text-height fa-fw" aria-hidden="true"></i> Tamanho do Texto
+                                        </h3>
+                                        <div class="form-group">
+                                            <label for="textSizeTop">Texto Superior: <span
+                                                    id="textSizeTopOut">10</span></label>
+                                            <input id="textSizeTop" type="range" min="2" max="50" step="2"
+                                                class="form-control-range" />
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="textSizeBottom">Texto Inferior: <span
+                                                    id="textSizeBottomOut">10</span></label>
+                                            <input id="textSizeBottom" type="range" min="2" max="50" step="2"
+                                                class="form-control-range" />
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card">
+                                    <div class="card-body">
+                                        <div class="form-group">
+                                            <h3><i class="fa fa-eye fa-fw" aria-hidden="true"></i> Tamanho da Prévia
+                                            </h3>
+                                            <div class="custom-control custom-checkbox">
+                                                <input id="trueSize" type="checkbox" class="custom-control-input" />
+                                                <label class="custom-control-label" for="trueSize">Mostrar tamanho
+                                                    real</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group mt-4">
+                                            <h3><i class="fa fa-download fa-fw" aria-hidden="true"></i> Exportar</h3>
+                                            <p>Se o botão não funcionar, clique com o botão direito na imagem e salve-a
+                                            </p>
+                                            <p>Se estiver no celular, baixe a imagem de origem e faça o upload
+                                                diretamente</p>
+                                            <button id="export" class="btn btn-primary export-button">Exportar!</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+                    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+                    <script src="js/fetchMatchDetailsData.js"></script>
+                    <script src="js/matchDetailsFunctions.js"></script>
+                    <script src="../meme_generator/js/script.js"></script>
+                    <script src="../meme_generator/js/nav.js"></script>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/jokeCard.js"></script>
-    <script src="js/matchDetailsFunctions.js"></script>
+    <script src="../session.js"></script>
 </body>
 
 </html>
