--- a/front/profile/profile.html
+++ b/front/profile/profile.html
@@ -18,25 +18,27 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="../matchs/matchs_list.html">PARTIDAS</a>
+            <a class="navbar-brand" href="../matchs/home.html">PARTIDAS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="../profile/profile.html">PERFIL</a>
                     </li>
+                    
                 </ul>
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">SAIR</a>
+                        <a class="nav-link" onclick="logout();">SAIR</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    
     <div class="container-fluid">
         <div class="main-body">
 
@@ -69,6 +71,7 @@
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/fetchProfileData.js"></script>
+    <script src="../session.js"></script>
 </body>
 
 </html>
